--- a/package.json
+++ b/package.json
@@ -34,5 +34,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "daisyui": "^3.5.1",
+    "dotenv": "^16.3.1",
+    "tailwindcss": "^3.3.3"
   }
 }
